# extension_django

./: .gitignore  CHANGELOG.md  Dockerfile  HOWTO.md  README.md  docker-compose.yml  manage.py  pyproject.toml
connect_ext/: __init__.py  events.py  extension.json  webapp.py
connect_ext/django/: asgi.py  settings.py  urls.py  wsgi.py
connect_ext/recipes/: admin.py  apps.py  filters.py  models.py  schemas.py  utils.py
connect_ext/recipes/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  test_webapp.py
